# locality-sensitive-hashing

./: CMakeLists.txt  LICENSE  README.md  main.cpp
dataset/heart_attack/: test.csv  train.csv
dataset/iris/: test.csv  train.csv
dataset/performance/: test.csv  train.csv
include/: lsh.hpp  reader.hpp
src/: lsh.cpp  reader.cpp
test/: CMakeLists.txt  LSHTest.cpp  LSHTest.txt  ReadDataset.cpp  ReadDataset.txt  lsh_body_performance.cpp  lsh_heart_attack.cpp  lsh_iris.cpp  lsh_iris.txt  lsh_performance.cpp
